--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
-	ext {
-		springBootVersion = '1.4.1.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.4.1.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 apply plugin: 'java'
@@ -15,19 +15,26 @@ apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 
 jar {
-	baseName = 'pdf-py3o'
-	version = '0.0.1-SNAPSHOT'
+    baseName = 'pdf-renderer'
+    version = ''
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 
 dependencies {
-	compile('org.projectlombok:lombok')
-	compile('org.springframework.boot:spring-boot-starter')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter')
+    compile('org.springframework:spring-web')
+    compile('com.google.guava:guava:19.0')
+    compile('com.fasterxml.jackson.core:jackson-databind')
+    compile('org.apache.httpcomponents:httpmime:4.5.2')
+    compile('org.apache.httpcomponents:fluent-hc:4.5.2')
+    compileOnly('org.springframework.boot:spring-boot-configuration-processor')
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
